core/testing/snapshots/control_flow/for_unpack.snap
### TITLE ###
Basic unpack
### INPUT ###
for valA, valB in [["a", 10], ["b", 20], ["c", 30]] with loop:
	print(loop.idx, valA, valB)
### STDOUT ###
0 a 10
1 b 20
2 c 30

### TITLE ###
Unpack with zip
### INPUT ###
a = ["a", "b", "c"]
b = [10, 20, 30]
for valA, valB in zip(a, b) with loop:
	print(loop.idx, valA, valB)
### STDOUT ###
0 a 10
1 b 20
2 c 30

### TITLE ###
Unpack four values
### INPUT ###
a = ["a", "b", "c"]
b = [10, 20, 30]
c = ["x", "y", "z"]
d = [100, 200, 300]
for valA, valB, valC, valD in zip(a, b, c, d) with loop:
	print(loop.idx, valA, valB, valC, valD)
### STDOUT ###
0 a 10 x 100
1 b 20 y 200
2 c 30 z 300

### TITLE ###
Two variables
### DESCRIPTION ###
Two variables now means unpack 2 values, not index + item
### INPUT ###
for valA, valB in [["a", 10], ["b", 20], ["c", 30]]:
	print(valA, valB)
### STDOUT ###
a 10
b 20
c 30

### TITLE ###
Unpack comprehension
### INPUT ###
a = [3, 4, 5]
b = [10, 20, 30]
c = [x * y for x, y in zip(a, b)]
print(c)
### STDOUT ###
[ 30, 80, 150 ]

### TITLE ###
Errors on non-list of lists
### INPUT ###
a = [3, 4, 5]
for valA, valB in a:
	print(valA, valB)
### STDERR ###
error[RAD20033]: Cannot unpack "int" into 2 values
  --> <script>:2:19
  |
1 | a = [3, 4, 5]
2 | for valA, valB in a:
  |                   ^
3 | 	print(valA, valB)
  |
   = info: rad explain RAD20033


### EXIT ###
1
### TITLE ###
Errors after one loop for inconsistent right
### INPUT ###
a = [ [10, 20], 30 ]
for valA, valB in a:
	print(valA, valB)
### STDOUT ###
10 20

### STDERR ###
error[RAD20033]: Cannot unpack "int" into 2 values
  --> <script>:2:19
  |
1 | a = [ [10, 20], 30 ]
2 | for valA, valB in a:
  |                   ^
3 | 	print(valA, valB)
  |
   = info: rad explain RAD20033


### EXIT ###
1
### TITLE ###
Errors if not enough values to unpack
### INPUT ###
for valA, valB, valC in [[10, 20], [30, 40]]:
	print(valA, valB, valC)
### STDERR ###
error[RAD20033]: Expected at least 3 values in inner list, got 2
  --> <script>:1:25
  |
1 | for valA, valB, valC in [[10, 20], [30, 40]]:
  |                         ^^^^^^^^^^^^^^^^^^^^
2 | 	print(valA, valB, valC)
  |
   = info: rad explain RAD20033


### EXIT ###
1
### TITLE ###
Can unpack even if not enough lefts
### DESCRIPTION ###
Extra values in inner list are ignored
### INPUT ###
for valA, valB in [["a", 10, 100], ["b", 20, 200], ["c", 30, 300]]:
	print(valA, valB)
### STDOUT ###
a 10
b 20
c 30

### TITLE ###
Migration error hint
### DESCRIPTION ###
When user uses old syntax with 'idx' as first variable, show helpful hint
### INPUT ###
for idx, item in [1, 2, 3]:
	print(idx, item)
### STDERR ###
error[RAD20033]: Cannot unpack "int" into 2 values
  --> <script>:1:18
  |
1 | for idx, item in [1, 2, 3]:
  |                  ^^^^^^^^^
2 | 	print(idx, item)
  |
   = help: The for-loop syntax changed. Use: for item in items with loop: print(loop.idx, item). See: https://amterp.github.io/rad/migrations/v0.7/
   = info: rad explain RAD20033


### EXIT ###
1
### TITLE ###
Migration error hint three vars
### DESCRIPTION ###
Migration hint also works for 3+ variables
### INPUT ###
for idx, item, extra in [1, 2, 3]:
	print(idx, item, extra)
### STDERR ###
error[RAD20033]: Cannot unpack "int" into 3 values
  --> <script>:1:25
  |
1 | for idx, item, extra in [1, 2, 3]:
  |                         ^^^^^^^^^
2 | 	print(idx, item, extra)
  |
   = help: The for-loop syntax changed. Use: for item in items with loop: print(loop.idx, item). See: https://amterp.github.io/rad/migrations/v0.7/
   = info: rad explain RAD20033


### EXIT ###
1
